# Harpocrates

./: .gitignore  README.md  myproject.xpr
PS/: .analytics
PS/.metadata/: version.ini
PS/enc/: .cproject  .project  platform.spr  platform.tcl
PS/enc/hw/: ADC_wrapper.bit
PS/xADCv3-2/: .cproject  .project  Doxyfile
PS/xADCv3-2/_ide/: hwspec.checksum
PS/xADCv3-2/docs/: CMakeLists.txt
PS/xADCv3-2/docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_defs.html  globals_func.html  helloworld_8c.html  index.html  platform_8c.html  platform_8h.html  platform_8h_source.html  platform__config_8h.html  platform__config_8h_source.html
PS/xADCv3-2/docs/html/search/: all_0.js  all_1.js  all_2.js  all_5.js  all_6.js  all_8.js  defines_0.js  defines_1.js  defines_3.js  files_0.js  files_1.js  functions_3.js  searchdata.js
PS/xADCv3-2/docs/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  helloworld_8c.tex  platform_8c.tex  platform_8h.tex  platform_8h_source.tex  platform__config_8h.tex  platform__config_8h_source.tex  refman.tex
PS/xADCv3-2/docs/xml/: Doxyfile.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  helloworld_8c.xml  index.xml  platform_8c.xml  platform_8h.xml  platform__config_8h.xml
PS/xADCv3-2/src/: helloworld.c
PS/xADCv3-2_system/: .cproject  .project
documentation/source/: conf.py  index.rst
myproject.hw/backup/: hw_ila_data_1.ila  hw_ila_data_2.ila
myproject.hw/hw_1/: hw.xml
myproject.srcs/constrs_1/new/: master_xdc.xdc
myproject.srcs/sim_1/new/: encrypt_tb.v  key_gen_tb.v  prime_gen_tb.v
(+165 files in other folders)
